@@ -468,8 +468,10 @@ URL_REAR_DEBIAN9_32="$URL_REAR_BASE/Rear/Debian_9.0/i386/rear_2.6-0_i386.deb"
 URL_REAR_DEBIAN9_64="$URL_REAR_BASE/Rear/Debian_9.0/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_DEBIAN10_32="$URL_REAR_BASE/Rear/Debian_10/i386/rear_2.6-0_i386.deb"
 URL_REAR_DEBIAN10_64="$URL_REAR_BASE/Rear/Debian_10/amd64/rear_2.6-0_amd64.deb"
-URL_REAR_DEBIAN11_32="$URL_REAR_BASE/Rear/Debian_10/i386/rear_2.6-0_i386.deb"
-URL_REAR_DEBIAN11_64="$URL_REAR_BASE/Rear/Debian_10/amd64/rear_2.6-0_amd64.deb"
+URL_REAR_DEBIAN11_32="$URL_REAR_BASE/Rear/Debian_11/i386/rear_2.7-0_i386.deb"
+URL_REAR_DEBIAN11_64="$URL_REAR_BASE/Rear/Debian_11/amd64/rear_2.7-0_amd64.deb"
+URL_REAR_DEBIAN11_32="$URL_REAR_BASE/Rear/Debian_11/i386/rear_2.7-0_i386.deb"
+URL_REAR_DEBIAN11_64="$URL_REAR_BASE/Rear/Debian_11/amd64/rear_2.7-0_amd64.deb"
 
 # UBUNTU Packages
 #
@@ -484,7 +486,7 @@ URL_REAR_UBUNTU17_64="$URL_REAR_BASE/Rear/xUbuntu_17.04/amd64/rear_2.6-0_amd64.d
 URL_REAR_UBUNTU18_64="$URL_REAR_BASE/Rear/xUbuntu_18.04/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_UBUNTU19_64="$URL_REAR_BASE/Rear/xUbuntu_19.04/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_UBUNTU20_64="$URL_REAR_BASE/Rear/xUbuntu_20.04/amd64/rear_2.6-0_amd64.deb"
-URL_REAR_UBUNTU22_64="$URL_REAR_BASE/Rear/xUbuntu_20.04/amd64/rear_2.6-0_amd64.deb"
+URL_REAR_UBUNTU22_64="$URL_REAR_BASE/Rear/xUbuntu_20.04/amd64/rear_2.7-0_amd64.deb"
 
 # CENTOS/REDHAT/ROCKY Packages
 #
@@ -506,8 +508,8 @@ URL_REAR_SUSE11_64="$URL_REAR_BASE/Rear/SLE_11_SP4/x86_64/rear-2.4-1.x86_64.rpm"
 URL_REAR_SUSE11_PPC64="$URL_REAR_BASE/Rear/SLE_11_SP4/ppc64/rear-2.4-1.ppc64.rpm"
 URL_REAR_SUSE12_64="$URL_REAR_BASE/Rear/SLE_12/x86_64/rear-2.6-1.x86_64.rpm"
 URL_REAR_SUSE12_PPC64="$URL_REAR_BASE/Rear/SLE_12/ppc64le/rear-2.6-1.ppc64le.rpm"
-URL_REAR_SUSE15_64="$URL_REAR_BASE/Rear/SLE_15/x86_64/rear-2.6-1.x86_64.rpm"
-URL_REAR_SUSE15_PPC64="$URL_REAR_BASE/Rear/SLE_15/ppc64le/rear-2.6-1.ppc64le.rpm"
+URL_REAR_SUSE15_64="$URL_REAR_BASE/Rear/SLE_15_SP3/x86_64/rear-2.7-1.x86_64.rpm"
+URL_REAR_SUSE15_PPC64="$URL_REAR_BASE/Rear/SLE_15_SP3/ppc64le/rear-2.7-1.ppc64le.rpm"
 
 ############### ----- REAR DEPENDENCIES
 #
@@ -520,6 +522,7 @@ REAR_DEP_DEBIAN8="binutils attr ethtool lsb-release dosfstools parted openssl ga
 REAR_DEP_DEBIAN9="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools less rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 REAR_DEP_DEBIAN10="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 REAR_DEP_DEBIAN11="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
+REAR_DEP_DEBIAN12="binutils attr ethtool lsb-release dosfstools parted openssl gawk sudo curl nfs-common bc net-tools wget rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 
 # UBUNTU Dependencies
 REAR_DEP_UBUNTU12="syslinux ethtool lsb-release genisoimage iproute iputils-ping binutils parted openssl gawk attr mingetty sudo curl nfs-common"
@@ -529,7 +532,7 @@ REAR_DEP_UBUNTU17="binutils attr nfs-common"
 REAR_DEP_UBUNTU18="binutils attr nfs-common rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
 REAR_DEP_UBUNTU19="binutils attr nfs-common kbd file isc-dhcp-client"
 REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc kbd file isc-dhcp-client"
-REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2 file kbd file isc-dhcp-client"
+REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2 file kbd file isc-dhcp-client parted less"
 
 # CENTOS/REDHAT Dependencies
 REAR_DEP_REDHAT5_32="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
